--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /OOPS_2_F2024/.vs/OOPS_2_F2024/v17
+/OOPS_2_F2024/.vs/OOPS_2_F2024/FileContentIndex
