--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /OOPS_2_F2024/Assignment02/.vs
 /OOPS_2_F2024/ClassExercise01/.vs
 /OOPS_2_F2024/ClassExercise02/.vs
+/OOPS_2_F2024/Assignment03/.vs
