--- a/OOPS_2_F2024/Assignment03/Assignment03.csproj
+++ b/OOPS_2_F2024/Assignment03/Assignment03.csproj
@@ -71,6 +71,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCharacterEditor.resx">
+      <DependentUpon>frmCharacterEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
