Assignment - 3: Validation added

--- a/OOPS_2_F2024/Assignment03/Assignment03.csproj
+++ b/OOPS_2_F2024/Assignment03/Assignment03.csproj
@@ -109,5 +109,11 @@
   <ItemGroup>
     <None Include="Resources\MainFrm_Bg.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pngegg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pngegg %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
