--- a/OOPS_2_F2024/Assignment06/Assignment06.csproj
+++ b/OOPS_2_F2024/Assignment06/Assignment06.csproj
@@ -55,6 +55,27 @@
     <Compile Include="Classes\QuizAttempt.cs" />
     <Compile Include="Classes\Student.cs" />
     <Compile Include="Classes\Tools.cs" />
+    <Compile Include="dts_quizzes.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dts_quizzes.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="dts_StudentCourses.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dts_StudentCourses.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="dts_Student_Grades.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dts_Student_Grades.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="frmCommonScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCommonScreen.Designer.cs">
+      <DependentUpon>frmCommonScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,14 +88,61 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmProfessorScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmProfessorScreen.Designer.cs">
+      <DependentUpon>frmProfessorScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSplashScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSplashScreen.Designer.cs">
+      <DependentUpon>frmSplashScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmStudentCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmStudentCourse.Designer.cs">
+      <DependentUpon>frmStudentCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmStudentQuizzes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmStudentQuizzes.Designer.cs">
+      <DependentUpon>frmStudentQuizzes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmStudentGrades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmStudentGrades.Designer.cs">
+      <DependentUpon>frmStudentGrades.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tools.cs" />
+    <EmbeddedResource Include="frmCommonScreen.resx">
+      <DependentUpon>frmCommonScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmProfessorScreen.resx">
+      <DependentUpon>frmProfessorScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSplashScreen.resx">
+      <DependentUpon>frmSplashScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmStudentCourse.resx">
+      <DependentUpon>frmStudentCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmStudentQuizzes.resx">
+      <DependentUpon>frmStudentQuizzes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmStudentGrades.resx">
+      <DependentUpon>frmStudentGrades.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,6 +153,39 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="dts_quizzes.xsc">
+      <DependentUpon>dts_quizzes.xsd</DependentUpon>
+    </None>
+    <None Include="dts_quizzes.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dts_quizzes.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dts_quizzes.xss">
+      <DependentUpon>dts_quizzes.xsd</DependentUpon>
+    </None>
+    <None Include="dts_StudentCourses.xsc">
+      <DependentUpon>dts_StudentCourses.xsd</DependentUpon>
+    </None>
+    <None Include="dts_StudentCourses.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dts_StudentCourses.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dts_StudentCourses.xss">
+      <DependentUpon>dts_StudentCourses.xsd</DependentUpon>
+    </None>
+    <None Include="dts_Student_Grades.xsc">
+      <DependentUpon>dts_Student_Grades.xsd</DependentUpon>
+    </None>
+    <None Include="dts_Student_Grades.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dts_Student_Grades.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dts_Student_Grades.xss">
+      <DependentUpon>dts_Student_Grades.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
